--- a/professores/templates/professores/index_professor.html
+++ b/professores/templates/professores/index_professor.html
@@ -32,7 +32,8 @@
     <ul>
         <a href="{% url 'resultado_bancas' %}"><li>Resultado Bancas</li></a>
         <a href="{% url 'analise_notas' %}"><li>Análise por Notas/Conceitos</li></a>
-        <a href="{% url 'objetivos' %}"><li>Análise por Objetivos de Aprendizado</li></a>
+        <a href="{% url 'evolucao_notas' %}"><li>Evolução por Notas/Conceitos</li></a>
+        <a href="{% url 'analise_objetivos' %}"><li>Análise por Objetivos de Aprendizado</li></a>
         <a href="{% url 'evolucao_objetivos' %}"><li>Evolução por Objetivos de Aprendizado</li></a>
     </ul>
 
