--- a/projetos/templates/projetos/analise_objetivos.html
+++ b/projetos/templates/projetos/analise_objetivos.html
@@ -14,6 +14,8 @@
   <script src="{% static 'js/w3.js' %}"></script>
   <script src="{% static 'js/Chart.min.js' %}"></script>
   <script src="{% static 'js/chartjs-plugin-datalabels.js' %}"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-annotation/0.5.7/chartjs-plugin-annotation.min.js"></script>
+
 
   {% comment %} Para chamar os Tooltips {% endcomment %}
   <script>{% include "tooltip.js" %}</script>
@@ -32,8 +34,6 @@
     <div class="atualizar">
     <div class="container">
 
-
-
         <div class="row mt-5">
             <div class="col"><canvas id="horizontal-objetivos"></canvas></div>
         </div>
@@ -48,6 +48,46 @@
 
         <script>
     
+{% comment %} var config_objetivos =  {
+  type: 'line',
+  data: {
+    labels: ["January", "February"],
+    datasets: [{
+      label: 'Dataset 1',
+      borderWidth: 2,
+      fill: false,
+      data: [2, 10]
+    }]
+  },
+  options: {
+    responsive: true,
+    title: {
+      display: true,
+      text: 'Chart.js Draw Line On Chart'
+    },
+    tooltips: {
+      mode: 'index',
+      intersect: true
+    },
+    annotation: {
+      annotations: [{
+        type: 'line',
+        mode: 'horizontal',
+        scaleID: 'y-axis-0',
+        value: 5,
+        borderColor: 'rgb(75, 192, 192)',
+        borderWidth: 4,
+        label: {
+          enabled: false,
+          content: 'Test label'
+        }
+      }]
+    }
+  }
+} {% endcomment %}
+
+
+
             var config_objetivos = {
                 type: 'horizontalBar',
                 data: {
@@ -85,6 +125,34 @@
                                 max: 10
                             }
                         }]
+                    },
+                    annotation: {
+                        annotations: [
+                            {
+                                type: 'line',
+                                mode: 'vertical',
+                                scaleID: 'x-axis-0',
+                                value: 5,
+                                borderColor: 'rgb(225, 12, 12)',
+                                borderWidth: 6,
+                                label: {
+                                    enabled: false,
+                                    content: 'Test label'
+                                }
+                            },
+                            {
+                                type: 'line',
+                                mode: 'vertical',
+                                scaleID: 'x-axis-0',
+                                value: 7,
+                                borderColor: 'rgb(12, 225, 12)',
+                                borderWidth: 6,
+                                label: {
+                                    enabled: false,
+                                    content: 'Test label'
+                                },
+                            }
+                        ]
                     }
                 }
             }
@@ -129,6 +197,34 @@
                                 max: 10
                             }
                         }]
+                    },
+                    annotation: {
+                        annotations: [
+                            {
+                                type: 'line',
+                                mode: 'vertical',
+                                scaleID: 'x-axis-0',
+                                value: 5,
+                                borderColor: 'rgb(225, 12, 12)',
+                                borderWidth: 3,
+                                label: {
+                                    enabled: false,
+                                    content: 'Test label'
+                                }
+                            },
+                            {
+                                type: 'line',
+                                mode: 'vertical',
+                                scaleID: 'x-axis-0',
+                                value: 7,
+                                borderColor: 'rgb(12, 225, 12)',
+                                borderWidth: 3,
+                                label: {
+                                    enabled: false,
+                                    content: 'Test label'
+                                },
+                            }
+                        ]
                     }
                 }
             }
@@ -170,6 +266,34 @@
                                 max: 10
                             }
                         }]
+                    },
+                    annotation: {
+                        annotations: [
+                            {
+                                type: 'line',
+                                mode: 'vertical',
+                                scaleID: 'x-axis-0',
+                                value: 5,
+                                borderColor: 'rgb(225, 12, 12)',
+                                borderWidth: 3,
+                                label: {
+                                    enabled: false,
+                                    content: 'Test label'
+                                }
+                            },
+                            {
+                                type: 'line',
+                                mode: 'vertical',
+                                scaleID: 'x-axis-0',
+                                value: 7,
+                                borderColor: 'rgb(12, 225, 12)',
+                                borderWidth: 3,
+                                label: {
+                                    enabled: false,
+                                    content: 'Test label'
+                                },
+                            }
+                        ]
                     }
                 }
             }
@@ -211,6 +335,34 @@
                                 max: 10
                             }
                         }]
+                    },
+                    annotation: {
+                        annotations: [
+                            {
+                                type: 'line',
+                                mode: 'vertical',
+                                scaleID: 'x-axis-0',
+                                value: 5,
+                                borderColor: 'rgb(225, 12, 12)',
+                                borderWidth: 3,
+                                label: {
+                                    enabled: false,
+                                    content: 'Test label'
+                                }
+                            },
+                            {
+                                type: 'line',
+                                mode: 'vertical',
+                                scaleID: 'x-axis-0',
+                                value: 7,
+                                borderColor: 'rgb(12, 225, 12)',
+                                borderWidth: 3,
+                                label: {
+                                    enabled: false,
+                                    content: 'Test label'
+                                },
+                            }
+                        ]
                     }
                 }
             }
@@ -254,6 +406,34 @@
                                 max: 10
                             }
                         }]
+                    },
+                    annotation: {
+                        annotations: [
+                            {
+                                type: 'line',
+                                mode: 'vertical',
+                                scaleID: 'x-axis-0',
+                                value: 5,
+                                borderColor: 'rgb(225, 12, 12)',
+                                borderWidth: 3,
+                                label: {
+                                    enabled: false,
+                                    content: 'Test label'
+                                }
+                            },
+                            {
+                                type: 'line',
+                                mode: 'vertical',
+                                scaleID: 'x-axis-0',
+                                value: 7,
+                                borderColor: 'rgb(12, 225, 12)',
+                                borderWidth: 3,
+                                label: {
+                                    enabled: false,
+                                    content: 'Test label'
+                                },
+                            }
+                        ]
                     }
                 }
             }
@@ -295,6 +475,34 @@
                                 max: 10
                             }
                         }]
+                    },
+                    annotation: {
+                        annotations: [
+                            {
+                                type: 'line',
+                                mode: 'vertical',
+                                scaleID: 'x-axis-0',
+                                value: 5,
+                                borderColor: 'rgb(225, 12, 12)',
+                                borderWidth: 3,
+                                label: {
+                                    enabled: false,
+                                    content: 'Test label'
+                                }
+                            },
+                            {
+                                type: 'line',
+                                mode: 'vertical',
+                                scaleID: 'x-axis-0',
+                                value: 7,
+                                borderColor: 'rgb(12, 225, 12)',
+                                borderWidth: 3,
+                                label: {
+                                    enabled: false,
+                                    content: 'Test label'
+                                },
+                            }
+                        ]
                     }
                 }
             }
@@ -336,6 +544,34 @@
                                 max: 10
                             }
                         }]
+                    },
+                    annotation: {
+                        annotations: [
+                            {
+                                type: 'line',
+                                mode: 'vertical',
+                                scaleID: 'x-axis-0',
+                                value: 5,
+                                borderColor: 'rgb(225, 12, 12)',
+                                borderWidth: 3,
+                                label: {
+                                    enabled: false,
+                                    content: 'Test label'
+                                }
+                            },
+                            {
+                                type: 'line',
+                                mode: 'vertical',
+                                scaleID: 'x-axis-0',
+                                value: 7,
+                                borderColor: 'rgb(12, 225, 12)',
+                                borderWidth: 3,
+                                label: {
+                                    enabled: false,
+                                    content: 'Test label'
+                                },
+                            }
+                        ]
                     }
                 }
             }
