--- a/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
+++ b/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
@@ -67,7 +67,7 @@
 
     {% if organizacoes_list %}
 
-      <table id="OrganizacoesTable">
+      <table id="OrganizacoesTable" style="width:100%">
         <tr>
           <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">
             Organização
@@ -109,7 +109,7 @@
               {% elif contato.tipo_de_retorno == 4 %}
                 "background-color:yellow" {% comment %} (4, 'Confirmamos um grupo de alunos para o projeto'), {% endcomment %}
               {% elif contato.tipo_de_retorno == 5 %}
-                "background-color:#c269d8" {% comment %} (5, 'Notificamos que não conseguimos montar projeto'),
+                "background-color:#e289df" {% comment %} (5, 'Notificamos que não conseguimos montar projeto'),
               {% elif contato.tipo_de_retorno == 6 %}
                 "background-color:green" {% comment %} (6, 'Documentação fechada para projeto'), {% endcomment %}
               {% elif contato.tipo_de_retorno == 7 %}
@@ -119,7 +119,7 @@
           {% endif %}
           >
             <td>
-              <a href="{% url 'organizacao_completo' organizacao.id %}">
+              <a href="{% url 'organizacao_completo' organizacao.id %}" target="_blank">
                 {{organizacao.nome}}
               </a>
             </td>
@@ -135,7 +135,7 @@
               </small>
             </td>
 
-            <td>
+            <td id='data{{organizacao.id}}'>
               {% if not contato %}
                 ---------
               {% else %}
@@ -146,7 +146,27 @@
               {% if not contato %}
                 ---------
               {% else %}
-                {{contato.texto}}
+                {% comment %} {{contato.texto}} {% endcomment %}
+                  <div style="float:left;width: 95%;">
+                    <a
+                      id='organizacao{{organizacao.id}}'
+                      data-organizacao='{{organizacao.id}}'
+                      class="open-annotation"
+                      href="{% url 'anotacao' organizacao.id %}"
+                      data-url="{% url 'anotacao' organizacao.id %}"
+                      data-anotacao="{{contato.id}}"
+                      >{{contato.texto}}</a
+                    >
+                  </div>
+                  <div style="float:right;">
+                    <a
+                      data-organizacao='{{organizacao.id}}'
+                      class="open-annotation"
+                      href="{% url 'anotacao' organizacao.id %}"
+                      data-url="{% url 'anotacao' organizacao.id %}"
+                      >&#10133;</a
+                    >
+                  </div>
               {% endif %}
             </td>
             <td class="text-center">
@@ -178,7 +198,6 @@
           {% endif %}
         {% endfor %}
       </table>
-        
 
       Organizações contactadas recentemente ({{total_organizacoes}}):<br>
 
@@ -189,7 +208,7 @@
 
       &nbsp;<span style="background-color:yellow">&nbsp;&nbsp;&nbsp;&nbsp;</span> Notificada de Grupo Fechado (<span id="notificada"></span>)<br>
       &nbsp;<span style="background-color:green">&nbsp;&nbsp;&nbsp;&nbsp;</span> Documentação Fechada para Projeto (<span id="documentada"></span>)<br>
-      &nbsp;<span style="background-color:#c269d8">&nbsp;&nbsp;&nbsp;&nbsp;</span> Avisada que não fechou grupo (<span id="sem_grupo"></span>)<br>
+      &nbsp;<span style="background-color:#e289df">&nbsp;&nbsp;&nbsp;&nbsp;</span> Avisada que não fechou grupo (<span id="sem_grupo"></span>)<br>
   
       <script>
         document.getElementById('so_contactados').innerHTML = so_contactados;
@@ -213,7 +232,10 @@
     {% endif %}
 
   </div>
+
   <p>&nbsp;</p>
+
+  {% include "annotation-modal.html" %}
 
   <script>
     function estrelas(id, pos) {
