acerta a data também

--- a/organizacoes/templates/organizacoes/organizacao_completo.html
+++ b/organizacoes/templates/organizacoes/organizacao_completo.html
@@ -194,7 +194,7 @@
           data-url="{% url 'anotacao' organizacao.id %}"
           data-anotacao="{{anotacao.id}}"
         >
-          {{anotacao.autor.get_full_name}} [{{anotacao.momento.date}}] : <spam id='anotacao{{anotacao.id}}'>{{anotacao.texto}}</spam>
+          {{anotacao.autor.get_full_name}} [<spam id='data{{anotacao.id}}'>{{anotacao.momento.date|date:"d/m/Y"}}</spam>] : <spam id='anotacao{{anotacao.id}}'>{{anotacao.texto}}</spam>
         </a>
       </li>
     {% endfor %}
