refresh de edição

--- a/professores/templates/professores/dinamicas_lista.html
+++ b/professores/templates/professores/dinamicas_lista.html
@@ -62,6 +62,9 @@
       function carrega_pagina(){
         {% include "edicoes_ajax.js" %}
       };
+      function recarregar_pagina(){
+        carrega_pagina();
+      }
     </script>
 
   </div>
