--- a/projetos/templates/projetos/projetos_fechados.html
+++ b/projetos/templates/projetos/projetos_fechados.html
@@ -381,6 +381,9 @@
       function carrega_pagina() {
         {% include "edicoes_ajax.js" %}
       };
+      function recarregar_pagina(){
+        carrega_pagina();
+      }
     </script>
 
   </div>
