--- a/propostas/templates/propostas/propostas_apresentadas.html
+++ b/propostas/templates/propostas/propostas_apresentadas.html
@@ -626,6 +626,9 @@
           {% include "edicoes_ajax.js" %}
         {% endwith %}
       };
+      function recarregar_pagina(){
+        carrega_pagina();
+      }
     </script>
 
   </div>
