--- a/projetos/templates/projetos/projetos_lista.html
+++ b/projetos/templates/projetos/projetos_lista.html
@@ -78,6 +78,9 @@
           {% include "edicoes_ajax.js" %}
         {% endwith %}
       };
+      function recarregar_pagina(){
+        carrega_pagina();
+      }
     </script>
   </div>
   <p>&nbsp;</p>
