--- a/templates/edicoes.html
+++ b/templates/edicoes.html
@@ -11,7 +11,7 @@
       <div class="input-group input-group-sm">
         {% if not sem_edicao %}
           <div class="input-group-prepend">
-            <label class="input-group-text" for="filterEdicao">Edição</label>
+            <label class="input-group-text" for="filterEdicao" onClick="recarregar_pagina()">Edição</label>
           </div>
           <select class="filter custom-select w-auto" id="filterEdicao">
             {% comment %} Se não quiser que aparece a opção todas crie uma variavel n_todas com True {% endcomment %}
