--- a/templates/edicoes_ajax.html
+++ b/templates/edicoes_ajax.html
@@ -5,13 +5,13 @@
 {% endcomment %}
 
 
-{% comment %} OBSOLETO {% endcomment %} 
+{% comment %} Rever e usar só um {% endcomment %} 
 
 
 {% if edicoes %}
   <script>
 
-     $(".filter").change(function(){
+     function recarregar_pagina() {
       $("#spinner").css("visibility", "visible");
       {% if not sem_edicao %}
         var edicao = $("#filterEdicao option:selected").attr("value");
@@ -40,7 +40,9 @@
               console.log('error')
           }
       });
-    });
+    }
+
+    $(".filter").change(recarregar_pagina);
 
   </script>
 
