--- a/users/templates/users/alunos_inscritos.html
+++ b/users/templates/users/alunos_inscritos.html
@@ -157,6 +157,9 @@
           {% include "edicoes_ajax.js" %}
         {% endwith %}
       };
+      function recarregar_pagina(){
+        carrega_pagina();
+      }
     </script>
 
   </div>
