--- a/users/templates/users/alunos_lista.html
+++ b/users/templates/users/alunos_lista.html
@@ -283,6 +283,9 @@
           {% include "edicoes_ajax.js" %}
         {% endwith %}
       };
+      function recarregar_pagina(){
+        carrega_pagina();
+      }
     </script>
 
   </div>
